# aihalloween

./: .gitignore  README.md  baby.py  check-audio.py  dog.py  fps.py  halloween.yaml  lights.py  mainloop.py  many.py  onboot.sh  pyproject.toml  run.sh  screamer.py  serve-status.sh  simple_tts.py  tongue.py
media/psst/: soundloop.sh
status/: index.html
