[tool.poetry]
name = "facescream"
version = "0.1.0"
description = "A spooky Halloween vision application"
authors = ["Leo Dirac <leo@groundlight.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
groundlight = "^0.12.1"
framegrab = "^v0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
