[tool.poetry]
name = "facescream"
version = "0.1.0"
description = "A spooky Halloween vision application"
authors = ["Leo Dirac <leo@groundlight.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
groundlight = "^0.12.1"
#framegrab = { path = "../framegrab", develop = true }

gtts = "^2.4.0"
typer = "^0.9.0"
pyserial = {git = "https://github.com/pyserial/pyserial"}
dmxenttecpro = {git = "https://github.com/SavinaRoja/DMXEnttecPro.git"}
framegrab = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
