[tool.poetry]
name = "facescream"
version = "0.5.0"
description = "A spooky computer-vision based Halloween"
authors = ["Leo Dirac <leo@groundlight.ai>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
groundlight = ">=0.18.0"
gtts = "^2.4.0"
pyserial = {git = "https://github.com/pyserial/pyserial"}
dmxenttecpro = {git = "https://github.com/SavinaRoja/DMXEnttecPro.git"}
framegrab = "^0.7.0"
# Numpy2 not working with framegrab for some reason.
numpy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
